# IMS

./: .gitignore  Cargo.toml  Dockerfile  PHASE5_COMPLETION.md  PHASE6_COMPLETION.md  PHASE6_STATUS.md  PHASE6_TEST_RESULTS.md  README.md  docker-compose.yml  index.html  justfile
crates/cuba-api/: Cargo.toml
crates/cuba-api/examples/: hash_password.rs
crates/cuba-api/src/: lib.rs  main.rs
crates/cuba-api/src/middleware/: auth.rs  mod.rs  permission.rs  trace.rs
crates/cuba-api/src/routes/: health.rs  mod.rs  system.rs
crates/cuba-auth/: Cargo.toml
crates/cuba-auth/src/: lib.rs
crates/cuba-auth/src/application/: authorize_use_case.rs  commands.rs  current_user_use_case.rs  jwt_claims.rs  login_use_case.rs  mod.rs  ports.rs  refresh_token.rs  services.rs  session_policy.rs
crates/cuba-auth/src/domain/: entities.rs  errors.rs  jwt_claims.rs  mod.rs  role.rs  user.rs  value_objects.rs
crates/cuba-auth/src/infrastructure/: mod.rs  postgres.rs  postgres_auth_repository.rs
crates/cuba-auth/src/interface/: dto.rs  handlers.rs  mod.rs  routes.rs
crates/cuba-inventory/: Cargo.toml
crates/cuba-inventory/src/application/: commands.rs  common.rs  errors.rs  inventory_count_model.rs  inventory_count_repository.rs  inventory_count_service.rs  mod.rs  ports.rs  queries.rs  services.rs
crates/cuba-inventory/src/domain/: entities.rs  errors.rs  inventory_count.rs  mod.rs  movement_type.rs  quality_status.rs  value_objects.rs
crates/cuba-inventory/src/infrastructure/: mod.rs  postgres.rs  postgres_inventory_count_repository.rs
crates/cuba-inventory/src/interface/: dto.rs  handlers.rs  mod.rs  routes.rs
crates/cuba-inventory/tests/: phase7_inventory_count_postgres.rs
crates/cuba-master-data/: Cargo.toml
crates/cuba-master-data/src/: lib.rs
crates/cuba-master-data/src/application/: commands.rs  error_mapping.rs  mod.rs  ports.rs  read_models.rs  services.rs
crates/cuba-master-data/src/domain/: entities.rs  enums.rs  errors.rs  mod.rs  value_objects.rs
crates/cuba-master-data/src/infrastructure/: mod.rs  postgres.rs
crates/cuba-master-data/src/interface/: dto.rs  handlers.rs  routes.rs
crates/cuba-mrp/: Cargo.toml
crates/cuba-mrp/src/: README.md
crates/cuba-mrp/src/application/: commands.rs  mod.rs  ports.rs  services.rs
crates/cuba-mrp/src/domain/: entities.rs  errors.rs  value_objects.rs
crates/cuba-mrp/src/infrastructure/: mod.rs  postgres.rs
crates/cuba-mrp/tests/: phase9_mrp_postgres.rs
crates/cuba-production/: Cargo.toml
crates/cuba-purchase/: Cargo.toml
crates/cuba-quality/: Cargo.toml
crates/cuba-quality/src/application/: commands.rs  mod.rs  ports.rs  services.rs  use_cases.rs
crates/cuba-quality/src/domain/: batch_quality.rs  entities.rs  enums.rs  errors.rs  inspection_lot.rs  inspection_result.rs  mod.rs  quality_notification.rs  value_objects.rs
crates/cuba-quality/src/infrastructure/: mod.rs  postgres.rs
crates/cuba-quality/src/interface/: dto.rs  handlers.rs  routes.rs
crates/cuba-reporting/: Cargo.toml
crates/cuba-reporting/tests/: phase9_reporting_postgres.rs
crates/cuba-sales/: Cargo.toml
crates/cuba-shared/: Cargo.toml
crates/cuba-shared/src/: audit.rs  config.rs  context.rs  db_error.rs  error.rs  lib.rs  pagination.rs  response.rs  settings.rs  state.rs
crates/cuba-traceability/: Cargo.toml
crates/cuba-worker/: Cargo.toml
crates/cuba-worker/src/: lib.rs  main.rs
crates/cuba-worker/src/tasks/: audit_cleanup.rs  low_stock_alert.rs  materialized_views.rs  mod.rs  mrp_suggestion.rs
docs/: architecture.md  database-migrations.md  endpoints.md  frontend-auth.md
docs/bruno/inventory-count.phase7/: 01-create-bin-count.bru  02-generate-lines.bru  03-update-line.bru  04-submit-approve-post-close.bru  bruno.json  collection.bru
docs/bruno/master-data.phase3/: 01-openapi.bru  02-create-raw-material.bru  03-create-finished-material.bru  04-create-raw-bin.bru  05-create-finished-bin.bru  06-create-supplier.bru  07-bind-material-supplier.bru  08-set-primary-supplier.bru  09-cancel-primary-supplier.bru  09-create-customer.bru  10-create-bom.bru  11-add-bom-component.bru  12-activate-bom.bru  13-validate-bom.bru  14-get-bom-tree.bru  15-preview-bom-explosion.bru  16-create-product-variant.bru  17-create-work-center.bru  18-create-inspection-char.bru  19-create-defect-code.bru  bruno.json  collection.bru
docs/bruno/order.phase5/: 01-create-purchase-order.bru  02-update-purchase-order.bru  03-post-purchase-receipt.bru  04-create-sales-order.bru  05-update-sales-order.bru  06-preview-fefo.bru  07-post-sales-shipment.bru  08-refresh-current-stock.bru  09-current-stock.bru  bruno.json  collection.bru
docs/openapi/: inventory-core.phase4.openapi.json  inventory-count.phase7.openapi.json  master-data.phase3.openapi.json  mrp-reporting.phase9.openapi.json  order-phase5.openapi.json  production.phase6.openapi.json
docs/postman/: inventory-count.phase7.postman_collection.json  master-data.phase3.postman_collection.json
migrations/: 0001_schema_final_ultimate_complete_v9.sql  0002_phase7_inventory_count_contract.sql  0003_audit_log_read_permission.sql  0004_traceability_read_permission.sql  0005_phase4_inventory_permissions.sql  0006_traceability_serial_demo_seed.sql  0007_quality_permissions_and_demo_login.sql  0008_system_param_permissions.sql  0009_material_quality_status_default.sql  0010_reject_inactive_bin_stock_increase.sql  0011_phase7_inventory_count_role_matrix.sql  0012_phase8_batch_quality_outbound_guard.sql  0013_phase6_production_contract.sql
scripts/: check_sqlx_migration_checksums.sh  init_db.sh  phase3_acceptance.sh  phase5_acceptance.sh  smoke_master_data.sh  verify_inventory_phase4.sh  verify_patch_migrations.sh  verify_phase6_production.sh  verify_phase7_inventory_count.sh
static/: index.html
tests/: smoke.md
tests/phase5/: README.md  fefo_pick_test.sh  insufficient_stock_test.sh  phase5_acceptance.sh  po_receipt_test.sh  report_refresh_test.sh  so_shipment_test.sh  verify_phase5.sql
tests/phase6/: ACCEPTANCE_CHECKLIST.md  README.md  phase6_acceptance.sh
(+68 files in other folders)
