[workspace]
resolver = "2"
members = [
    "crates/cuba-shared",
    "crates/cuba-auth",
    "crates/cuba-master-data",
    "crates/cuba-inventory",
    "crates/cuba-purchase",
    "crates/cuba-sales",
    "crates/cuba-production",
    "crates/cuba-quality",
    "crates/cuba-mrp",
    "crates/cuba-reporting",
    "crates/cuba-api",
    "crates/cuba-worker",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "Proprietary"
authors = ["IMS Workspace"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
argon2 = "0.5"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
dotenvy = "0.15"
jsonwebtoken = "9"
once_cell = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "time", "rust_decimal", "json", "ipnetwork"] }
thiserror = "2"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
validator = { version = "0.20", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
