[workspace]
resolver = "3"
members = [
    "crates/cuba-shared",
    "crates/cuba-auth",
    "crates/cuba-master-data",
    "crates/cuba-inventory",
    "crates/cuba-purchase",
    "crates/cuba-sales",
    "crates/cuba-production",
    "crates/cuba-quality",
    "crates/cuba-mrp",
    "crates/cuba-reporting",
    "crates/cuba-api",
    "crates/cuba-worker",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
authors = ["IMS Workspace"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
argon2 = "0.5"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
dotenvy = "0.15"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
once_cell = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "time", "rust_decimal", "json", "ipnetwork"] }
thiserror = "2"
time = { version = "0.3", features = ["serde"] }
ipnetwork = "0.20"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
validator = { version = "0.20", features = ["derive"] }

# Development profile - faster compilation
[profile.dev]
opt-level = 1
debug = 1
incremental = true
codegen-units = 256

# Release profile - optimized for production
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = "line-tables-only"

# Workspace-wide lints for code quality and consistency
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
