[package]
name = "cuba-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
cuba-auth = { path = "../cuba-auth" }
cuba-inventory = { path = "../cuba-inventory" }
cuba-master-data = { path = "../cuba-master-data" }
cuba-mrp = { path = "../cuba-mrp" }
cuba-production = { path = "../cuba-production" }
cuba-purchase = { path = "../cuba-purchase" }
cuba-quality = { path = "../cuba-quality" }
cuba-reporting = { path = "../cuba-reporting" }
cuba-sales = { path = "../cuba-sales" }
cuba-shared = { path = "../cuba-shared" }
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
