[package]
name = "cuba-auth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
argon2.workspace = true
axum.workspace = true
cuba-shared = { path = "../cuba-shared" }
ipnetwork.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
uuid.workspace = true
